// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreationView module renders as expected with discovered data 1`] = `
<div
  className="creation-view showEditor"
>
  <div
    className="creation-view-split-container showEditor"
  >
    <div
      className="SplitPane  vertical "
      style={
        Object {
          "MozUserSelect": "text",
          "WebkitUserSelect": "text",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "left": 0,
          "msUserSelect": "text",
          "outline": "none",
          "overflow": "hidden",
          "position": "unset",
          "right": 0,
          "userSelect": "text",
        }
      }
    >
      <div
        className="Pane vertical Pane1  "
        style={
          Object {
            "flex": "none",
            "outline": "none",
            "position": "relative",
            "width": 1000,
          }
        }
      >
        <div
          className="creation-view-controls-container"
        >
          <div
            className="creation-view-controls-note"
          >
            All fields marked with an asterisk (*) are mandatory.
          </div>
          <div
            className="creation-view-controls"
          >
            <div
              className="creation-view-controls-textbox"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                Name
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
              </div>
              <input
                aria-invalid={false}
                aria-label="name"
                className="pf-c-form-control"
                disabled={false}
                id="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={false}
                required={true}
                type="text"
                value="policy-grc"
              />
            </div>
            <div
              className="creation-view-controls-singleselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Namespace
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="The namespace to create and store the policy on the hub cluster."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeahead-1"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-0-select-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="The namespace to create and store the policy on the hub cluster."
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="namespace"
                    aria-labelledby=" pf-select-toggle-id-0"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-0"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Specifications
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="The parameter section that describes which set of rules will validate a cluster."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-1"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-1-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="Begin typing to search for template to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="specs"
                    aria-labelledby=" pf-select-toggle-id-1"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-1"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Cluster selector
                <div
                  content="Fill the required parameter field to select the cluster where your policy is applied. The placement policy and placement binding are required, and added into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-2"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-2-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="Begin typing to search for cluster label to select. If not selected, all clusters will be applied."
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="clusters"
                    aria-labelledby=" pf-select-toggle-id-2"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-2"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Standards
                <div
                  content="The name or names of security standards your policy should validate. You can only create a new label by adding it directly into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-3"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-3-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="Begin typing to search for label to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="standards"
                    aria-labelledby=" pf-select-toggle-id-3"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-3"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Categories
                <div
                  content="A security control category represent specific requirements for one or more standards. You can only create a new label by adding it directly into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-4"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-4-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="Begin typing to search for label to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="categories"
                    aria-labelledby=" pf-select-toggle-id-4"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-4"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Controls
                <div
                  content="The control contains the instructions for ensuring that a policy meets the security requirements for one or more standards. You can only create a new label by adding it directly into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-5"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-5-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="Begin typing to search for label to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="controls"
                    aria-labelledby=" pf-select-toggle-id-5"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-5"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-radiobutton"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                Remediation
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="Represents how violations are handled as defined in the resource."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-radio"
              >
                <input
                  aria-invalid={false}
                  checked={true}
                  className="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-1"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe={true}
                  disabled={false}
                  id="remediation-inform"
                  name="remediation-inform"
                  onChange={[Function]}
                  type="radio"
                  value="inform"
                />
                <label
                  className="pf-c-radio__label"
                  htmlFor="remediation-inform"
                >
                  Inform - Reports the violation, which requires manual remediation.
                </label>
              </div>
              <div
                className="pf-c-radio"
              >
                <input
                  aria-invalid={false}
                  checked={false}
                  className="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-2"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe={true}
                  disabled={false}
                  id="remediation-enforce"
                  name="remediation-enforce"
                  onChange={[Function]}
                  type="radio"
                  value="enforce"
                />
                <label
                  className="pf-c-radio__label"
                  htmlFor="remediation-enforce"
                >
                  Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported.
                </label>
              </div>
            </div>
            <div
              className="creation-view-controls-textbox-title"
            >
              Disable policy
              <div
                content="Select to disable the policy from being propagated to the managed cluster. If selected, the policy can be re-enabled from the dropdown menu in the policies table."
                data-testid="mockTooltip"
              >
                <svg
                  className="info-icon"
                >
                  <use
                    href="#diagramIcons_info"
                  />
                </svg>
              </div>
            </div>
            <div
              className="creation-view-controls-checkbox"
            >
              <div
                className="pf-c-check pf-m-standalone"
              >
                <input
                  aria-invalid={false}
                  aria-label="disabled"
                  checked={false}
                  className="pf-c-check__input"
                  disabled={false}
                  id="disabled"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
              <div>
                Disabled
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        className="Resizer vertical "
        onClick={[Function]}
        onDoubleClick={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="presentation"
        style={Object {}}
      />
      <div
        className="Pane vertical Pane2  "
        style={
          Object {
            "flex": 1,
            "outline": "none",
            "position": "relative",
          }
        }
      >
        <div
          className="creation-view-yaml"
        >
          <div
            className="yamlEditorContainer"
            style={
              Object {
                "display": "block",
                "minHeight": "100px",
              }
            }
          >
            <div
              className="react-monaco-editor-container"
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreationView module renders as expected with empty discovered data 1`] = `
<div
  className="creation-view showEditor"
>
  <div
    className="creation-view-split-container showEditor"
  >
    <div
      className="SplitPane  vertical "
      style={
        Object {
          "MozUserSelect": "text",
          "WebkitUserSelect": "text",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "left": 0,
          "msUserSelect": "text",
          "outline": "none",
          "overflow": "hidden",
          "position": "unset",
          "right": 0,
          "userSelect": "text",
        }
      }
    >
      <div
        className="Pane vertical Pane1  "
        style={
          Object {
            "flex": "none",
            "outline": "none",
            "position": "relative",
            "width": 1000,
          }
        }
      >
        <div
          className="creation-view-controls-container"
        >
          <div
            className="creation-view-controls-note"
          >
            All fields marked with an asterisk (*) are mandatory.
          </div>
          <div
            className="creation-view-controls"
          >
            <div
              className="creation-view-controls-textbox"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                Name
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
              </div>
              <input
                aria-invalid={false}
                aria-label="name"
                className="pf-c-form-control"
                disabled={false}
                id="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={false}
                required={true}
                type="text"
                value="policy-grc"
              />
            </div>
            <div
              className="creation-view-controls-singleselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Namespace
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="The namespace to create and store the policy on the hub cluster."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeahead-2"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-6-select-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="The namespace to create and store the policy on the hub cluster."
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="namespace"
                    aria-labelledby=" pf-select-toggle-id-6"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-6"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Specifications
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="The parameter section that describes which set of rules will validate a cluster."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-6"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-7-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="Begin typing to search for template to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="specs"
                    aria-labelledby=" pf-select-toggle-id-7"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-7"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Cluster selector
                <div
                  content="Fill the required parameter field to select the cluster where your policy is applied. The placement policy and placement binding are required, and added into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-7"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-8-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="Begin typing to search for cluster label to select. If not selected, all clusters will be applied."
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="clusters"
                    aria-labelledby=" pf-select-toggle-id-8"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-8"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Standards
                <div
                  content="The name or names of security standards your policy should validate. You can only create a new label by adding it directly into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-8"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-9-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="Begin typing to search for label to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="standards"
                    aria-labelledby=" pf-select-toggle-id-9"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-9"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Categories
                <div
                  content="A security control category represent specific requirements for one or more standards. You can only create a new label by adding it directly into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-9"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-10-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="Begin typing to search for label to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="categories"
                    aria-labelledby=" pf-select-toggle-id-10"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-10"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                Controls
                <div
                  content="The control contains the instructions for ensuring that a policy meets the security requirements for one or more standards. You can only create a new label by adding it directly into the YAML file."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-10"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-11-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="Begin typing to search for label to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="controls"
                    aria-labelledby=" pf-select-toggle-id-11"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-11"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-radiobutton"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                Remediation
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="Represents how violations are handled as defined in the resource."
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-radio"
              >
                <input
                  aria-invalid={false}
                  checked={true}
                  className="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-3"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe={true}
                  disabled={false}
                  id="remediation-inform"
                  name="remediation-inform"
                  onChange={[Function]}
                  type="radio"
                  value="inform"
                />
                <label
                  className="pf-c-radio__label"
                  htmlFor="remediation-inform"
                >
                  Inform - Reports the violation, which requires manual remediation.
                </label>
              </div>
              <div
                className="pf-c-radio"
              >
                <input
                  aria-invalid={false}
                  checked={false}
                  className="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-4"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe={true}
                  disabled={false}
                  id="remediation-enforce"
                  name="remediation-enforce"
                  onChange={[Function]}
                  type="radio"
                  value="enforce"
                />
                <label
                  className="pf-c-radio__label"
                  htmlFor="remediation-enforce"
                >
                  Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported.
                </label>
              </div>
            </div>
            <div
              className="creation-view-controls-textbox-title"
            >
              Disable policy
              <div
                content="Select to disable the policy from being propagated to the managed cluster. If selected, the policy can be re-enabled from the dropdown menu in the policies table."
                data-testid="mockTooltip"
              >
                <svg
                  className="info-icon"
                >
                  <use
                    href="#diagramIcons_info"
                  />
                </svg>
              </div>
            </div>
            <div
              className="creation-view-controls-checkbox"
            >
              <div
                className="pf-c-check pf-m-standalone"
              >
                <input
                  aria-invalid={false}
                  aria-label="disabled"
                  checked={false}
                  className="pf-c-check__input"
                  disabled={false}
                  id="disabled"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
              <div>
                Disabled
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        className="Resizer vertical "
        onClick={[Function]}
        onDoubleClick={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="presentation"
        style={Object {}}
      />
      <div
        className="Pane vertical Pane2  "
        style={
          Object {
            "flex": 1,
            "outline": "none",
            "position": "relative",
          }
        }
      >
        <div
          className="creation-view-yaml"
        >
          <div
            className="yamlEditorContainer"
            style={
              Object {
                "display": "block",
                "minHeight": "100px",
              }
            }
          >
            <div
              className="react-monaco-editor-container"
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreationView module renders as expected without discovered data 1`] = `
<div
  className="creation-view showEditor"
>
  <div
    className="creation-view-split-container showEditor"
  >
    <div
      className="SplitPane  vertical "
      style={
        Object {
          "MozUserSelect": "text",
          "WebkitUserSelect": "text",
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "100%",
          "left": 0,
          "msUserSelect": "text",
          "outline": "none",
          "overflow": "hidden",
          "position": "unset",
          "right": 0,
          "userSelect": "text",
        }
      }
    >
      <div
        className="Pane vertical Pane1  "
        style={
          Object {
            "flex": "none",
            "outline": "none",
            "position": "relative",
            "width": 1000,
          }
        }
      >
        <div
          className="creation-view-controls-container"
        >
          <div
            className="creation-view-controls-note"
          >
            All fields marked with an asterisk (*) are mandatory.
          </div>
          <div
            className="creation-view-controls"
          >
            <div
              className="creation-view-controls-textbox"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                creation.view.policy.name
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
              </div>
              <input
                aria-invalid={false}
                aria-label="name"
                className="pf-c-form-control"
                disabled={false}
                id="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={false}
                required={true}
                type="text"
                value="policy-grc"
              />
            </div>
            <div
              className="creation-view-controls-singleselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                creation.view.policy.namespace
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="policy.create.namespace.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeahead-3"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-12-select-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="The namespace to create and store the policy on the hub cluster."
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="namespace"
                    aria-labelledby=" pf-select-toggle-id-12"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-12"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                creation.view.policy.specs
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="policy.create.specs.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-11"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-13-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="creation.view.policy.select.specs"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="specs"
                    aria-labelledby=" pf-select-toggle-id-13"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-13"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                creation.view.policy.selector
                <div
                  content="policy.create.selectors.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-12"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-14-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="creation.view.policy.select.selectors"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="clusters"
                    aria-labelledby=" pf-select-toggle-id-14"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-14"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                creation.view.policy.standards
                <div
                  content="policy.create.standards.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-13"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-15-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="creation.view.policy.select.standards"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="standards"
                    aria-labelledby=" pf-select-toggle-id-15"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-15"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                creation.view.policy.categories
                <div
                  content="policy.create.categories.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-14"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-16-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="creation.view.policy.select.categories"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="categories"
                    aria-labelledby=" pf-select-toggle-id-16"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-16"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-multiselect"
            >
              <div
                className="creation-view-controls-multiselect-title"
              >
                creation.view.policy.controls
                <div
                  content="policy.create.controls.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-15"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe={true}
              >
                <div
                  className="pf-c-select__toggle pf-m-typeahead"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                >
                  <div
                    className="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-activedescendant={null}
                      aria-label=""
                      autoComplete="off"
                      className="pf-c-form-control pf-c-select__toggle-typeahead"
                      disabled={false}
                      id="pf-select-toggle-id-17-select-multi-typeahead-typeahead"
                      onChange={[Function]}
                      onClick={[Function]}
                      placeholder="creation.view.policy.select.controls"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded={false}
                    aria-haspopup="listbox"
                    aria-label="controls"
                    aria-labelledby=" pf-select-toggle-id-17"
                    className="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    disabled={false}
                    id="pf-select-toggle-id-17"
                    onClick={[Function]}
                    tabIndex={-1}
                    type="button"
                  >
                    <svg
                      aria-hidden={true}
                      aria-labelledby={null}
                      className="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style={
                        Object {
                          "verticalAlign": "-0.125em",
                        }
                      }
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              className="creation-view-controls-radiobutton"
            >
              <div
                className="creation-view-controls-textbox-title"
              >
                creation.view.policy.remediation
                <div
                  className="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="policy.create.remediation.tooltip"
                  data-testid="mockTooltip"
                >
                  <svg
                    className="info-icon"
                  >
                    <use
                      href="#diagramIcons_info"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="pf-c-radio"
              >
                <input
                  aria-invalid={false}
                  checked={true}
                  className="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-5"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe={true}
                  disabled={false}
                  id="remediation-inform"
                  name="remediation-inform"
                  onChange={[Function]}
                  type="radio"
                  value="inform"
                />
                <label
                  className="pf-c-radio__label"
                  htmlFor="remediation-inform"
                >
                  Inform - Reports the violation, which requires manual remediation.
                </label>
              </div>
              <div
                className="pf-c-radio"
              >
                <input
                  aria-invalid={false}
                  checked={false}
                  className="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-6"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe={true}
                  disabled={false}
                  id="remediation-enforce"
                  name="remediation-enforce"
                  onChange={[Function]}
                  type="radio"
                  value="enforce"
                />
                <label
                  className="pf-c-radio__label"
                  htmlFor="remediation-enforce"
                >
                  Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported.
                </label>
              </div>
            </div>
            <div
              className="creation-view-controls-textbox-title"
            >
              creation.view.policy.disabled
              <div
                content="policy.create.disabled.tooltip"
                data-testid="mockTooltip"
              >
                <svg
                  className="info-icon"
                >
                  <use
                    href="#diagramIcons_info"
                  />
                </svg>
              </div>
            </div>
            <div
              className="creation-view-controls-checkbox"
            >
              <div
                className="pf-c-check pf-m-standalone"
              >
                <input
                  aria-invalid={false}
                  aria-label="disabled"
                  checked={false}
                  className="pf-c-check__input"
                  disabled={false}
                  id="disabled"
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
              <div>
                Disabled
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        className="Resizer vertical "
        onClick={[Function]}
        onDoubleClick={[Function]}
        onMouseDown={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        role="presentation"
        style={Object {}}
      />
      <div
        className="Pane vertical Pane2  "
        style={
          Object {
            "flex": 1,
            "outline": "none",
            "position": "relative",
          }
        }
      >
        <div
          className="creation-view-yaml"
        >
          <div
            className="yamlEditorContainer"
            style={
              Object {
                "display": "block",
                "minHeight": "100px",
              }
            }
          >
            <div
              className="react-monaco-editor-container"
              style={
                Object {
                  "height": "100%",
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreationView module renders with notification on general error 1`] = `
<div
  aria-label="Danger Alert"
  className="pf-c-alert pf-m-inline pf-m-danger"
  data-ouia-component-id="OUIA-Generated-Alert-danger-2"
  data-ouia-component-type="PF4/Alert"
  data-ouia-safe={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="pf-c-alert__icon"
  >
    <svg
      aria-hidden={true}
      aria-labelledby={null}
      fill="currentColor"
      height="1em"
      role="img"
      style={
        Object {
          "verticalAlign": "-0.125em",
        }
      }
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
      />
    </svg>
  </div>
  <h4
    className="pf-c-alert__title"
  >
    <span
      className="pf-u-screen-reader"
    >
      Danger alert:
    </span>
    An unexpected error occurred. Try again.
  </h4>
  
</div>
`;

exports[`CreationView module renders with notification on permission error 1`] = `
<div
  aria-label="Danger Alert"
  className="pf-c-alert pf-m-inline pf-m-danger"
  data-ouia-component-id="OUIA-Generated-Alert-danger-1"
  data-ouia-component-type="PF4/Alert"
  data-ouia-safe={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="pf-c-alert__icon"
  >
    <svg
      aria-hidden={true}
      aria-labelledby={null}
      fill="currentColor"
      height="1em"
      role="img"
      style={
        Object {
          "verticalAlign": "-0.125em",
        }
      }
      viewBox="0 0 512 512"
      width="1em"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
      />
    </svg>
  </div>
  <h4
    className="pf-c-alert__title"
  >
    <span
      className="pf-u-screen-reader"
    >
      Danger alert:
    </span>
    You do not have permission to create policies in this namespace
  </h4>
  
</div>
`;

exports[`CreationView module renders with spinner when loading 1`] = `
<span
  aria-valuetext="Loading..."
  className="pf-c-spinner pf-m-xl patternfly-spinner"
  role="progressbar"
>
  <span
    className="pf-c-spinner__clipper"
  />
  <span
    className="pf-c-spinner__lead-ball"
  />
  <span
    className="pf-c-spinner__tail-ball"
  />
</span>
`;
